Add compile and run instructions for NASA LaRC processing

--- a/larccld.fd/README
+++ b/larccld.fd/README
@@ -1,4 +1,8 @@
 
+To compile: bash build_larccld.sh
+
+To run: sbatch run_process_NASA_LaRC.sh
+
 constants.f90 and kinds.f90 come from rrfs_utl/rtma_minmaxtrh.fd/minrh.fd
 
 Different code versions
